Implementation of lock/unlockable door with key; door opening